--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNP5sWgxGPlXR22JyfvWSW2",
+      "authorship_tag": "ABX9TyM9z/bxV5mB2Z+sfUIX0FMJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2385,7 +2385,7 @@
         "table = pd.crosstab(\n",
         "    peaks_tidy['HIMAL_FACTOR'], # index: unique values become the ROWS of the table\n",
         "    peaks_tidy['PSTATUS'], # columns: unique values become the COLUMNS of the table\n",
-        "    normalize='index').mul(100)\n",
+        "    normalize='index').mul(100).round(2)\n",
         "\n",
         "table.sort_values(by=1, ascending=False)"
       ],
@@ -2395,40 +2395,40 @@
           "height": 708
         },
         "id": "zXNI8smGGKMh",
-        "outputId": "4456ab2c-f190-43ab-d1c3-536568e796e0"
+        "outputId": "1f087d17-b2fd-4edc-c25c-1493b26225d9"
       },
-      "execution_count": 66,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "PSTATUS                            1          2\n",
-              "HIMAL_FACTOR                                   \n",
-              "Kanti/Palchung             66.666667  33.333333\n",
-              "Api/Byas Risi/Guras        61.111111  38.888889\n",
-              "Saipal                     50.000000  50.000000\n",
-              "Janak/Ohmi Kangri          46.666667  53.333333\n",
-              "Ganesh/Shringi             45.000000  55.000000\n",
-              "Makalu                     33.333333  66.666667\n",
-              "Nalakankar/Chandi/Changla  29.411765  70.588235\n",
-              "Jongsang                   28.571429  71.428571\n",
-              "Kangchenjunga/Simhalila    26.666667  73.333333\n",
-              "Kanjiroba                  23.076923  76.923077\n",
-              "Dhaulagiri                 20.000000  80.000000\n",
-              "Peri                       20.000000  80.000000\n",
-              "Manaslu/Mansiri            19.047619  80.952381\n",
-              "Jugal                      18.181818  81.818182\n",
-              "Khumbu                     15.189873  84.810127\n",
-              "Langtang                   14.285714  85.714286\n",
-              "Mukut/Mustang              13.333333  86.666667\n",
-              "Annapurna                   7.142857  92.857143\n",
-              "Rolwaling                   6.250000  93.750000\n",
-              "Damodar                     3.703704  96.296296"
+              "PSTATUS                        1      2\n",
+              "HIMAL_FACTOR                           \n",
+              "Kanti/Palchung             66.67  33.33\n",
+              "Api/Byas Risi/Guras        61.11  38.89\n",
+              "Saipal                     50.00  50.00\n",
+              "Janak/Ohmi Kangri          46.67  53.33\n",
+              "Ganesh/Shringi             45.00  55.00\n",
+              "Makalu                     33.33  66.67\n",
+              "Nalakankar/Chandi/Changla  29.41  70.59\n",
+              "Jongsang                   28.57  71.43\n",
+              "Kangchenjunga/Simhalila    26.67  73.33\n",
+              "Kanjiroba                  23.08  76.92\n",
+              "Dhaulagiri                 20.00  80.00\n",
+              "Peri                       20.00  80.00\n",
+              "Manaslu/Mansiri            19.05  80.95\n",
+              "Jugal                      18.18  81.82\n",
+              "Khumbu                     15.19  84.81\n",
+              "Langtang                   14.29  85.71\n",
+              "Mukut/Mustang              13.33  86.67\n",
+              "Annapurna                   7.14  92.86\n",
+              "Rolwaling                   6.25  93.75\n",
+              "Damodar                     3.70  96.30"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cddbdae7-daad-4920-848d-2d90b9232161\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b6591963-c2ed-43d1-911b-3da4f815ef9c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2459,103 +2459,103 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>Kanti/Palchung</th>\n",
-              "      <td>66.666667</td>\n",
-              "      <td>33.333333</td>\n",
+              "      <td>66.67</td>\n",
+              "      <td>33.33</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Api/Byas Risi/Guras</th>\n",
-              "      <td>61.111111</td>\n",
-              "      <td>38.888889</td>\n",
+              "      <td>61.11</td>\n",
+              "      <td>38.89</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Saipal</th>\n",
-              "      <td>50.000000</td>\n",
-              "      <td>50.000000</td>\n",
+              "      <td>50.00</td>\n",
+              "      <td>50.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Janak/Ohmi Kangri</th>\n",
-              "      <td>46.666667</td>\n",
-              "      <td>53.333333</td>\n",
+              "      <td>46.67</td>\n",
+              "      <td>53.33</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Ganesh/Shringi</th>\n",
-              "      <td>45.000000</td>\n",
-              "      <td>55.000000</td>\n",
+              "      <td>45.00</td>\n",
+              "      <td>55.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Makalu</th>\n",
-              "      <td>33.333333</td>\n",
-              "      <td>66.666667</td>\n",
+              "      <td>33.33</td>\n",
+              "      <td>66.67</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Nalakankar/Chandi/Changla</th>\n",
-              "      <td>29.411765</td>\n",
-              "      <td>70.588235</td>\n",
+              "      <td>29.41</td>\n",
+              "      <td>70.59</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Jongsang</th>\n",
-              "      <td>28.571429</td>\n",
-              "      <td>71.428571</td>\n",
+              "      <td>28.57</td>\n",
+              "      <td>71.43</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Kangchenjunga/Simhalila</th>\n",
-              "      <td>26.666667</td>\n",
-              "      <td>73.333333</td>\n",
+              "      <td>26.67</td>\n",
+              "      <td>73.33</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Kanjiroba</th>\n",
-              "      <td>23.076923</td>\n",
-              "      <td>76.923077</td>\n",
+              "      <td>23.08</td>\n",
+              "      <td>76.92</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Dhaulagiri</th>\n",
-              "      <td>20.000000</td>\n",
-              "      <td>80.000000</td>\n",
+              "      <td>20.00</td>\n",
+              "      <td>80.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Peri</th>\n",
-              "      <td>20.000000</td>\n",
-              "      <td>80.000000</td>\n",
+              "      <td>20.00</td>\n",
+              "      <td>80.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Manaslu/Mansiri</th>\n",
-              "      <td>19.047619</td>\n",
-              "      <td>80.952381</td>\n",
+              "      <td>19.05</td>\n",
+              "      <td>80.95</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Jugal</th>\n",
-              "      <td>18.181818</td>\n",
-              "      <td>81.818182</td>\n",
+              "      <td>18.18</td>\n",
+              "      <td>81.82</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Khumbu</th>\n",
-              "      <td>15.189873</td>\n",
-              "      <td>84.810127</td>\n",
+              "      <td>15.19</td>\n",
+              "      <td>84.81</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Langtang</th>\n",
-              "      <td>14.285714</td>\n",
-              "      <td>85.714286</td>\n",
+              "      <td>14.29</td>\n",
+              "      <td>85.71</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Mukut/Mustang</th>\n",
-              "      <td>13.333333</td>\n",
-              "      <td>86.666667</td>\n",
+              "      <td>13.33</td>\n",
+              "      <td>86.67</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Annapurna</th>\n",
-              "      <td>7.142857</td>\n",
-              "      <td>92.857143</td>\n",
+              "      <td>7.14</td>\n",
+              "      <td>92.86</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Rolwaling</th>\n",
-              "      <td>6.250000</td>\n",
-              "      <td>93.750000</td>\n",
+              "      <td>6.25</td>\n",
+              "      <td>93.75</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Damodar</th>\n",
-              "      <td>3.703704</td>\n",
-              "      <td>96.296296</td>\n",
+              "      <td>3.70</td>\n",
+              "      <td>96.30</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2563,7 +2563,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cddbdae7-daad-4920-848d-2d90b9232161')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b6591963-c2ed-43d1-911b-3da4f815ef9c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2615,12 +2615,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cddbdae7-daad-4920-848d-2d90b9232161 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b6591963-c2ed-43d1-911b-3da4f815ef9c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cddbdae7-daad-4920-848d-2d90b9232161');\n",
+              "        const element = document.querySelector('#df-b6591963-c2ed-43d1-911b-3da4f815ef9c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2640,8 +2640,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-59a40f96-d0cb-4e71-82d1-cb6b7ea26cec\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-59a40f96-d0cb-4e71-82d1-cb6b7ea26cec')\"\n",
+              "    <div id=\"df-8bae8e3a-6bfe-45e3-bc3f-f55c3d94a756\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8bae8e3a-6bfe-45e3-bc3f-f55c3d94a756')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -2760,7 +2760,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-59a40f96-d0cb-4e71-82d1-cb6b7ea26cec button');\n",
+              "            document.querySelector('#df-8bae8e3a-6bfe-45e3-bc3f-f55c3d94a756 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -2772,11 +2772,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"table\",\n  \"rows\": 20,\n  \"fields\": [\n    {\n      \"column\": \"HIMAL_FACTOR\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 20,\n        \"samples\": [\n          \"Kanti/Palchung\",\n          \"Annapurna\",\n          \"Langtang\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 1,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 17.965269796214823,\n        \"min\": 3.7037037037037033,\n        \"max\": 66.66666666666666,\n        \"num_unique_values\": 19,\n        \"samples\": [\n          66.66666666666666,\n          33.33333333333333,\n          19.047619047619047\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 2,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 17.965269796214823,\n        \"min\": 33.33333333333333,\n        \"max\": 96.29629629629629,\n        \"num_unique_values\": 19,\n        \"samples\": [\n          33.33333333333333,\n          66.66666666666666,\n          80.95238095238095\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"table\",\n  \"rows\": 20,\n  \"fields\": [\n    {\n      \"column\": \"HIMAL_FACTOR\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 20,\n        \"samples\": [\n          \"Kanti/Palchung\",\n          \"Annapurna\",\n          \"Langtang\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 1,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 17.965998177844607,\n        \"min\": 3.7,\n        \"max\": 66.67,\n        \"num_unique_values\": 19,\n        \"samples\": [\n          66.67,\n          33.33,\n          19.05\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 2,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 17.965998177844607,\n        \"min\": 33.33,\n        \"max\": 96.3,\n        \"num_unique_values\": 19,\n        \"samples\": [\n          33.33,\n          66.67,\n          80.95\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 68
         }
       ]
     },
