--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9z/bxV5mB2Z+sfUIX0FMJ",
+      "authorship_tag": "ABX9TyPIy2iGeVoiS3K2ETBThdZ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1044,7 +1044,7 @@
         "id": "-nWZoqK2gIzF",
         "outputId": "96c6e75e-d1fc-4662-8c88-a2e0c110e9c3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1561,7 +1561,7 @@
         "id": "C9hfnspogMVy",
         "outputId": "71cb86e0-efd3-4ed9-bf6b-e34eb24e5ddc"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2342,8 +2342,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. What is the distribution of climbing status (PSTATUS) across the different\n",
-        "#    mountain ranges (HIMAL_FACTOR)?\n",
+        "# 1. What is the distribution of climbing status (PSTATUS) across the different mountain ranges (HIMAL_FACTOR)?\n",
         "\n",
         "print(peaks_tidy['PSTATUS'].unique())\n",
         "# PSTATUS appears to be a categorical/binary variable (1, 2).\n",
@@ -2364,7 +2363,7 @@
         },
         "outputId": "3b7beabe-546c-4353-e7ae-3280d0eda6bd"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2397,7 +2396,7 @@
         "id": "zXNI8smGGKMh",
         "outputId": "1f087d17-b2fd-4edc-c25c-1493b26225d9"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
