--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNogZxTZUZlD4Yf3m7Kk5io",
+      "authorship_tag": "ABX9TyM04izkfNlg8NT5+0kpw2Un",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3356,7 +3356,12 @@
         "peak_stats['Height_Difference'] = peak_stats['Median_Height'] - peak_stats['Mean_Height']\n",
         "peak_stats['Height_Difference_Percent'] = (peak_stats['Height_Difference'] / peak_stats['Mean_Height']) * 100\n",
         "peak_stats.sort_values(by='Median_Height', ascending=False, inplace=True)\n",
-        "peak_stats"
+        "peak_stats\n",
+        "\n",
+        "# The mean and median heights are similar for most ranges, but Saipal and Makalu\n",
+        "# show the largest relative differences, indicating a few extreme peaks strongly\n",
+        "# influence the mean. Most other ranges have minor skew (<2%), suggesting peak\n",
+        "# heights are relatively balanced."
       ],
       "metadata": {
         "id": "VoAhUa1hOxEZ",
