--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaFPj1V7jEchdV2eZQL+IY",
+      "authorship_tag": "ABX9TyPqrTkz2uoTvFnQuqM6hRDv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2846,7 +2846,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Create a horizontal dot plot using Plotly to illustrate this distribution."
+        "# TODO: Create a horizontal dot plot using Plotly to illustrate this distribution."
       ],
       "metadata": {
         "id": "5iYEXcVJ_eMR"
@@ -3187,7 +3187,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create plot for distribution of number of peaks."
+        "# TODO: Create plot for distribution of number of peaks."
       ],
       "metadata": {
         "id": "qrOF_bSYfC0n"
