--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqrTkz2uoTvFnQuqM6hRDv",
+      "authorship_tag": "ABX9TyPV+gcNRfNq0rBm3Biz3XRX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3025,10 +3025,9 @@
         "peaks_count.sort_values(ascending = False, inplace = True)\n",
         "peaks_count\n",
         "\n",
-        "# I thought to check the unique combination of peaks and values because this would directly influence the average. Typical EDA.\n",
-        "# The number of peaks varies significantly across mountain ranges.\n",
-        "# Khumbu has the most recorded peaks (79), while Saipal has the fewest (7),\n",
-        "# highlighting differences in peak density and exploration across regions."
+        "# I decided to use the median rather than the mean because, before exploring the data,\n",
+        "# I intuitively felt that ranges with many peaks (e.g., 70+) versus very few peaks (e.g., 6+)\n",
+        "# might not be directly comparable, and the median gives a more robust central value in such cases."
       ],
       "metadata": {
         "colab": {
@@ -3036,9 +3035,9 @@
           "height": 743
         },
         "id": "dE9ixf6LE5Z_",
-        "outputId": "640a7507-bc58-469b-a9d5-9f67abd7ccd8"
+        "outputId": "1fcf1f3a-c5f0-44ed-d8a6-3c46c8d55016"
       },
-      "execution_count": 106,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3180,7 +3179,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 120
         }
       ]
     },
@@ -3202,7 +3201,7 @@
         "peaks_mean.sort_values(ascending = False, inplace = True)\n",
         "peaks_mean\n",
         "\n",
-        "# Among the mountain ranges, Kangchenjunga/Simhalila has the highest average peak height at 7,237 meters,\n",
+        "# Among the mountain ranges, Kangchenjunga/Simhalila has the highest mean peak height at 7,237 meters,\n",
         "# indicating that climbers attempting peaks in this range face greater elevation challenges compared to other ranges."
       ],
       "metadata": {
