--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPV+gcNRfNq0rBm3Biz3XRX",
+      "authorship_tag": "ABX9TyNfnHWkwPmHANLZWK8JP3Xa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4076,20 +4076,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 3. What is the distribution of peak heights (HEIGHTM) for peaks that are open (OPEN) versus not open?\n",
+        "\n",
+        "#bin the results to make it meaningful"
+      ],
       "metadata": {
         "id": "XmJ1geHnOkG6"
       },
-      "execution_count": 109,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Lo-h_p5MEblA"
-      },
-      "execution_count": 110,
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -4104,7 +4099,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 3. What is the distribution of peak heights (HEIGHTM) for peaks that are open (OPEN) versus not open?\n",
+        "\n",
         "# 4. Which climbing routes (ROUTE1, ROUTE2, ROUTE3, ROUTE4) have the highest success rates (SUCCESS1, SUCCESS2, SUCCESS3, SUCCESS4) across all expeditions?\n",
         "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit success rates?\n",
         "# 6. How often does bad weather (TERMREASON = 4) cause termination compared to technical difficulty (TERMREASON = 10)?\n",
