--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVuzoaVfHYOGoyE5GOn6av",
+      "authorship_tag": "ABX9TyNgH4qze1lUFoA3uG/69c9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4081,7 +4081,8 @@
         "\n",
         "peaks_tidy.HEIGHTM.hist()\n",
         "\n",
-        "# Most peak heights fall between\n"
+        "# Visualizing the distribution of peak heights. Most peaks cluster between ~6100–6700 meters,\n",
+        "# indicating that the majority of Himalayan peaks in this dataset fall within this elevation range.\n"
       ],
       "metadata": {
         "id": "XmJ1geHnOkG6",
@@ -4089,9 +4090,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 448
         },
-        "outputId": "c9c51c3f-7867-43b7-fc5d-6bc52cafcc7b"
+        "outputId": "b4b58b82-1fa1-4dee-e081-9c93ee2c9806"
       },
-      "execution_count": 151,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4101,7 +4102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 151
+          "execution_count": 160
         },
         {
           "output_type": "display_data",
@@ -4142,9 +4143,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 262
         },
-        "outputId": "5e73df61-55de-459d-a54b-f19d0ca3311f"
+        "outputId": "ce0dce90-d932-4619-9dd3-2e82410efb52"
       },
-      "execution_count": 152,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
@@ -4167,7 +4168,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a2bfbc69-8fbc-4b22-843a-0e5b850fea13\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-528861a0-8460-4997-a514-521282761e17\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4222,7 +4223,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a2bfbc69-8fbc-4b22-843a-0e5b850fea13')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-528861a0-8460-4997-a514-521282761e17')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4274,12 +4275,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a2bfbc69-8fbc-4b22-843a-0e5b850fea13 button.colab-df-convert');\n",
+              "        document.querySelector('#df-528861a0-8460-4997-a514-521282761e17 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a2bfbc69-8fbc-4b22-843a-0e5b850fea13');\n",
+              "        const element = document.querySelector('#df-528861a0-8460-4997-a514-521282761e17');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4299,8 +4300,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-9bda46f6-284b-4189-9bcb-25185dea92a5\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9bda46f6-284b-4189-9bcb-25185dea92a5')\"\n",
+              "    <div id=\"df-ffc76b9b-77eb-4cd3-8eaf-0724990868cc\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ffc76b9b-77eb-4cd3-8eaf-0724990868cc')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -4419,14 +4420,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-9bda46f6-284b-4189-9bcb-25185dea92a5 button');\n",
+              "            document.querySelector('#df-ffc76b9b-77eb-4cd3-8eaf-0724990868cc button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_e9e1002d-2703-4c93-93a8-3b59083ab06c\">\n",
+              "  <div id=\"id_88f65d57-34ec-4216-b110-b174a51f4611\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -4470,7 +4471,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_e9e1002d-2703-4c93-93a8-3b59083ab06c button.colab-df-generate');\n",
+              "        document.querySelector('#id_88f65d57-34ec-4216-b110-b174a51f4611 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -4491,7 +4492,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 152
+          "execution_count": 157
         }
       ]
     },
