--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCVYyMxnDJYJN304RdUjR7",
+      "authorship_tag": "ABX9TyOwr2Nvc4elBL2Skp0wr0kF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/k10sj02/tidy-pydy-tuesday/blob/main/2025_01_21_himalayan_expeditions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ================================\n",
+        "#       DATA LOADING\n",
+        "# ================================\n"
+      ],
+      "metadata": {
+        "id": "1ZN4UzCfcXQf"
+      }
     },
     {
       "cell_type": "code",
@@ -2343,11 +2354,11 @@
         "peaks_tidy.info()"
       ],
       "metadata": {
-        "id": "zFVjem5QbVdG",
-        "outputId": "786a1b4d-2487-4e36-c105-27941901e7c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zFVjem5QbVdG",
+        "outputId": "786a1b4d-2487-4e36-c105-27941901e7c0"
       },
       "execution_count": 190,
       "outputs": [
@@ -2402,11 +2413,11 @@
         "exped_tidy.info()"
       ],
       "metadata": {
-        "id": "ONh4E_O9bYtC",
-        "outputId": "b623ea0a-865e-4dc8-c72f-c31f73ca299a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ONh4E_O9bYtC",
+        "outputId": "b623ea0a-865e-4dc8-c72f-c31f73ca299a"
       },
       "execution_count": 191,
       "outputs": [
@@ -2496,16 +2507,36 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "poh7RMfLb2ZO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ================================\n",
+        "#       Exploratory Data Analysis\n",
+        "# ================================"
+      ],
+      "metadata": {
+        "id": "Hu-EQLzjb4fd"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "peaks_tidy.describe()"
       ],
       "metadata": {
-        "id": "e_6BKBgVbcUt",
-        "outputId": "d3bd7a7f-5d1d-4844-8135-ab9f9dfa645c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "e_6BKBgVbcUt",
+        "outputId": "d3bd7a7f-5d1d-4844-8135-ab9f9dfa645c"
       },
       "execution_count": 192,
       "outputs": [
@@ -2873,12 +2904,12 @@
         "exped_tidy.describe()"
       ],
       "metadata": {
-        "id": "VPMoT205bpQy",
-        "outputId": "7fc969bb-7f8f-438a-d334-0ef3daf0b953",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "id": "VPMoT205bpQy",
+        "outputId": "7fc969bb-7f8f-438a-d334-0ef3daf0b953"
       },
       "execution_count": 193,
       "outputs": [
@@ -3321,6 +3352,17 @@
           "execution_count": 193
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ================================\n",
+        "#       Question-Driven Analysis\n",
+        "# ================================\n"
+      ],
+      "metadata": {
+        "id": "qDMVGnTYcE_r"
+      }
     },
     {
       "cell_type": "code",
