--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwr2Nvc4elBL2Skp0wr0kF",
+      "authorship_tag": "ABX9TyOTRnVVUMmP42f9R5Fc2Avw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 199,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "id": "wGb7ct4L_18u",
-        "outputId": "8532404f-549c-40e5-bb7f-79e93d1ba636"
+        "outputId": "18bbb544-8f78-4629-f030-2b51dbd4f7f1"
       },
       "outputs": [
         {
@@ -56,12 +57,90 @@
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
             "Requirement already satisfied: pyreadstat in /usr/local/lib/python3.12/dist-packages (1.3.1)\n",
             "Requirement already satisfied: dbfread in /usr/local/lib/python3.12/dist-packages (2.0.7)\n",
+            "Collecting pandas_profiling\n",
+            "  Downloading pandas_profiling-3.2.0-py2.py3-none-any.whl.metadata (21 kB)\n",
             "Requirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.0.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
             "Requirement already satisfied: narwhals>=1.47 in /usr/local/lib/python3.12/dist-packages (from pyreadstat) (2.10.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+            "Collecting joblib~=1.1.0 (from pandas_profiling)\n",
+            "  Downloading joblib-1.1.1-py2.py3-none-any.whl.metadata (5.2 kB)\n",
+            "Requirement already satisfied: scipy>=1.4.1 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (1.16.3)\n",
+            "Requirement already satisfied: matplotlib>=3.2.0 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (3.10.0)\n",
+            "Requirement already satisfied: pydantic>=1.8.1 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (2.11.10)\n",
+            "Requirement already satisfied: PyYAML>=5.0.0 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (6.0.3)\n",
+            "Requirement already satisfied: jinja2>=2.11.1 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (3.1.6)\n",
+            "Collecting markupsafe~=2.1.1 (from pandas_profiling)\n",
+            "  Downloading MarkupSafe-2.1.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.0 kB)\n",
+            "Collecting visions==0.7.4 (from visions[type_image_path]==0.7.4->pandas_profiling)\n",
+            "  Downloading visions-0.7.4-py3-none-any.whl.metadata (5.9 kB)\n",
+            "Collecting htmlmin>=0.1.12 (from pandas_profiling)\n",
+            "  Downloading htmlmin-0.1.12.tar.gz (19 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: missingno>=0.4.2 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (0.5.2)\n",
+            "Collecting phik>=0.11.1 (from pandas_profiling)\n",
+            "  Downloading phik-0.12.5-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (5.6 kB)\n",
+            "Collecting tangled-up-in-unicode==0.2.0 (from pandas_profiling)\n",
+            "  Downloading tangled_up_in_unicode-0.2.0-py3-none-any.whl.metadata (4.8 kB)\n",
+            "Requirement already satisfied: requests>=2.24.0 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (2.32.4)\n",
+            "Requirement already satisfied: tqdm>=4.48.2 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (4.67.1)\n",
+            "Requirement already satisfied: seaborn>=0.10.1 in /usr/local/lib/python3.12/dist-packages (from pandas_profiling) (0.13.2)\n",
+            "Collecting multimethod>=1.4 (from pandas_profiling)\n",
+            "  Downloading multimethod-2.0-py3-none-any.whl.metadata (9.2 kB)\n",
+            "Requirement already satisfied: attrs>=19.3.0 in /usr/local/lib/python3.12/dist-packages (from visions==0.7.4->visions[type_image_path]==0.7.4->pandas_profiling) (25.4.0)\n",
+            "Requirement already satisfied: networkx>=2.4 in /usr/local/lib/python3.12/dist-packages (from visions==0.7.4->visions[type_image_path]==0.7.4->pandas_profiling) (3.5)\n",
+            "Collecting imagehash (from visions[type_image_path]==0.7.4->pandas_profiling)\n",
+            "  Downloading ImageHash-4.3.2-py2.py3-none-any.whl.metadata (8.4 kB)\n",
+            "Requirement already satisfied: Pillow in /usr/local/lib/python3.12/dist-packages (from visions[type_image_path]==0.7.4->pandas_profiling) (11.3.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (1.3.3)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (4.60.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (1.4.9)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (25.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (3.2.5)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.12/dist-packages (from pydantic>=1.8.1->pandas_profiling) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.33.2 in /usr/local/lib/python3.12/dist-packages (from pydantic>=1.8.1->pandas_profiling) (2.33.2)\n",
+            "Requirement already satisfied: typing-extensions>=4.12.2 in /usr/local/lib/python3.12/dist-packages (from pydantic>=1.8.1->pandas_profiling) (4.15.0)\n",
+            "Requirement already satisfied: typing-inspection>=0.4.0 in /usr/local/lib/python3.12/dist-packages (from pydantic>=1.8.1->pandas_profiling) (0.4.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.24.0->pandas_profiling) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.24.0->pandas_profiling) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.24.0->pandas_profiling) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.24.0->pandas_profiling) (2025.10.5)\n",
+            "Requirement already satisfied: PyWavelets in /usr/local/lib/python3.12/dist-packages (from imagehash->visions[type_image_path]==0.7.4->pandas_profiling) (1.9.0)\n",
+            "Downloading pandas_profiling-3.2.0-py2.py3-none-any.whl (262 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m262.6/262.6 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading tangled_up_in_unicode-0.2.0-py3-none-any.whl (4.7 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m64.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading visions-0.7.4-py3-none-any.whl (102 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m102.4/102.4 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading joblib-1.1.1-py2.py3-none-any.whl (309 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m309.8/309.8 kB\u001b[0m \u001b[31m24.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading MarkupSafe-2.1.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (28 kB)\n",
+            "Downloading multimethod-2.0-py3-none-any.whl (9.8 kB)\n",
+            "Downloading phik-0.12.5-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (679 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m679.7/679.7 kB\u001b[0m \u001b[31m44.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading ImageHash-4.3.2-py2.py3-none-any.whl (296 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m296.7/296.7 kB\u001b[0m \u001b[31m21.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: htmlmin\n",
+            "  Building wheel for htmlmin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for htmlmin: filename=htmlmin-0.1.12-py3-none-any.whl size=27081 sha256=ded24107dd6549661d6603575d82ddb3e67e97f920c77ef223472beb9160086a\n",
+            "  Stored in directory: /root/.cache/pip/wheels/5f/d4/d7/4189b07b5902ee9f3ce0dbb14909fbe8037c39d6c63ffd49c9\n",
+            "Successfully built htmlmin\n",
+            "Installing collected packages: htmlmin, tangled-up-in-unicode, multimethod, markupsafe, joblib, imagehash, visions, phik, pandas_profiling\n",
+            "  Attempting uninstall: markupsafe\n",
+            "    Found existing installation: MarkupSafe 3.0.3\n",
+            "    Uninstalling MarkupSafe-3.0.3:\n",
+            "      Successfully uninstalled MarkupSafe-3.0.3\n",
+            "  Attempting uninstall: joblib\n",
+            "    Found existing installation: joblib 1.5.2\n",
+            "    Uninstalling joblib-1.5.2:\n",
+            "      Successfully uninstalled joblib-1.5.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "imbalanced-learn 0.14.0 requires joblib<2,>=1.2.0, but you have joblib 1.1.1 which is incompatible.\n",
+            "scikit-learn 1.6.1 requires joblib>=1.2.0, but you have joblib 1.1.1 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed htmlmin-0.1.12 imagehash-4.3.2 joblib-1.1.1 markupsafe-2.1.5 multimethod-2.0 pandas_profiling-3.2.0 phik-0.12.5 tangled-up-in-unicode-0.2.0 visions-0.7.4\n"
           ]
         }
       ],
@@ -2523,6 +2602,21 @@
       ],
       "metadata": {
         "id": "Hu-EQLzjb4fd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Some data scientists remember the steps as the **“Five D’s”** (informally used in teaching / internal notes):\n",
+        "\n",
+        "- **Describe** – understand structure and summary statistics  \n",
+        "- **Detect missing / duplicates** – clean data  \n",
+        "- **Distributions** – visualize numeric/categorical columns  \n",
+        "- **Dependence / relationships** – correlations, group plots  \n",
+        "- **Deviations** – outliers, anomalies"
+      ],
+      "metadata": {
+        "id": "r0JmQx6wgDgO"
       }
     },
     {
