--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFYj+pvJsQPK/5yZ0E1xI7",
+      "authorship_tag": "ABX9TyMfB9AP8k7RlFG58ZOKRbsJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -457,7 +457,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Some data scientists remember the steps as the **“Five D’s”** (informally used in teaching / internal notes):\n",
+        "Some data scientists remember the classic EDA steps as the **“Five D’s”** (informally used in teaching / internal notes):\n",
         "\n",
         "- **Describe** – understand structure and summary statistics  \n",
         "- **Detect missing / duplicates** – clean data  \n",
