--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRm2QcHmEIdQknQ6ENO7f8",
+      "authorship_tag": "ABX9TyNn/5xtdGbz9ThwlmLOfmj9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -848,12 +848,12 @@
         "exped_tidy.head()"
       ],
       "metadata": {
-        "id": "y43ikpwZXgIr",
-        "outputId": "783318a8-081e-424a-81a6-eb7db760314b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "id": "y43ikpwZXgIr",
+        "outputId": "783318a8-081e-424a-81a6-eb7db760314b"
       },
       "execution_count": 15,
       "outputs": [
@@ -2777,7 +2777,11 @@
         "\n",
         "# Heatmap\n",
         "plt.figure(figsize=(12, 8))\n",
-        "sns.heatmap(corr, annot=True, cmap='coolwarm')"
+        "sns.heatmap(corr, annot=True, cmap='coolwarm')\n",
+        "\n",
+        "# # Aside from PSTATUS and PSEASON (r≈0.7), most numeric variables show very weak correlations (-0.1 < r < 0.1).\n",
+        "# This suggests minimal linear dependencies among these features, reducing concerns about multicollinearity\n",
+        "# and indicating that each numeric variable may contribute independent information for modeling or further analysis."
       ],
       "metadata": {
         "colab": {
@@ -2785,9 +2789,9 @@
           "height": 700
         },
         "id": "poh7RMfLb2ZO",
-        "outputId": "7d12c4d4-e59d-4d6b-a09a-486a9af1b619"
+        "outputId": "f5a1941b-8cf7-475c-b018-4ba8ad3220da"
       },
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2797,7 +2801,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
@@ -2819,21 +2823,82 @@
         "\n",
         "# Compute correlation\n",
         "corr = numeric_cols.corr()\n",
+        "print(corr)\n",
         "\n",
         "# Heatmap\n",
         "plt.figure(figsize=(12, 8))\n",
-        "sns.heatmap(corr, annot=True, cmap='coolwarm')"
+        "sns.heatmap(corr, annot=True, cmap='coolwarm')\n",
+        "\n",
+        "# Most numeric variables show weak correlations (-0.1 to 0.1), indicating little linear relationship,\n",
+        "# except for a few strong correlations (e.g., SMTDAYS vs TOTDAYS, HIGHPOINT vs CAMPS),\n",
+        "# which may be important to consider for modeling or feature selection."
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 784
+          "height": 1000
         },
         "id": "R0H_S1bNiFhm",
-        "outputId": "d2fa8148-ee83-456e-824b-1ec064d2b435"
+        "outputId": "454d9932-6a95-485a-800e-9e7bba21d847"
       },
-      "execution_count": 23,
+      "execution_count": 30,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              SEASON      HOST   SMTDAYS   TOTDAYS  TERMREASON  HIGHPOINT  \\\n",
+            "SEASON      1.000000  0.002108 -0.271818 -0.253186    0.028825  -0.258120   \n",
+            "HOST        0.002108  1.000000 -0.053921 -0.060953    0.018917   0.063417   \n",
+            "SMTDAYS    -0.271818 -0.053921  1.000000  0.834318   -0.015474   0.259584   \n",
+            "TOTDAYS    -0.253186 -0.060953  0.834318  1.000000    0.066673   0.193874   \n",
+            "TERMREASON  0.028825  0.018917 -0.015474  0.066673    1.000000  -0.387009   \n",
+            "HIGHPOINT  -0.258120  0.063417  0.259584  0.193874   -0.387009   1.000000   \n",
+            "CAMPS      -0.294602 -0.019577  0.339303  0.267799   -0.275038   0.657499   \n",
+            "ROPE        0.054537 -0.015922  0.035469  0.096948    0.081799   0.017552   \n",
+            "TOTMEMBERS -0.005070  0.010660 -0.123888 -0.138418   -0.214416   0.167584   \n",
+            "SMTMEMBERS -0.039094  0.066286 -0.079894 -0.111569   -0.377953   0.341137   \n",
+            "MDEATHS    -0.059435 -0.026262  0.021203 -0.012699   -0.025221   0.083250   \n",
+            "TOTHIRED   -0.211216 -0.016592 -0.034078 -0.049548   -0.220281   0.282010   \n",
+            "SMTHIRED   -0.182623  0.047524 -0.029230 -0.060945   -0.318500   0.365363   \n",
+            "HDEATHS    -0.073118 -0.020256  0.001499  0.015573   -0.015744   0.028358   \n",
+            "CHKSUM     -0.092157 -0.002518  0.214847  0.160979   -0.340366   0.805902   \n",
+            "\n",
+            "               CAMPS      ROPE  TOTMEMBERS  SMTMEMBERS   MDEATHS  TOTHIRED  \\\n",
+            "SEASON     -0.294602  0.054537   -0.005070   -0.039094 -0.059435 -0.211216   \n",
+            "HOST       -0.019577 -0.015922    0.010660    0.066286 -0.026262 -0.016592   \n",
+            "SMTDAYS     0.339303  0.035469   -0.123888   -0.079894  0.021203 -0.034078   \n",
+            "TOTDAYS     0.267799  0.096948   -0.138418   -0.111569 -0.012699 -0.049548   \n",
+            "TERMREASON -0.275038  0.081799   -0.214416   -0.377953 -0.025221 -0.220281   \n",
+            "HIGHPOINT   0.657499  0.017552    0.167584    0.341137  0.083250  0.282010   \n",
+            "CAMPS       1.000000 -0.000708    0.206252    0.283993  0.093310  0.349327   \n",
+            "ROPE       -0.000708  1.000000   -0.050609   -0.055569 -0.012481 -0.038324   \n",
+            "TOTMEMBERS  0.206252 -0.050609    1.000000    0.756765  0.144846  0.761437   \n",
+            "SMTMEMBERS  0.283993 -0.055569    0.756765    1.000000  0.127009  0.694567   \n",
+            "MDEATHS     0.093310 -0.012481    0.144846    0.127009  1.000000  0.141767   \n",
+            "TOTHIRED    0.349327 -0.038324    0.761437    0.694567  0.141767  1.000000   \n",
+            "SMTHIRED    0.340396 -0.045923    0.656119    0.841036  0.144613  0.841969   \n",
+            "HDEATHS     0.074534 -0.009627    0.099564    0.082438  0.110898  0.170938   \n",
+            "CHKSUM      0.441351  0.029557    0.121663    0.281346  0.048889  0.146368   \n",
+            "\n",
+            "            SMTHIRED   HDEATHS    CHKSUM  \n",
+            "SEASON     -0.182623 -0.073118 -0.092157  \n",
+            "HOST        0.047524 -0.020256 -0.002518  \n",
+            "SMTDAYS    -0.029230  0.001499  0.214847  \n",
+            "TOTDAYS    -0.060945  0.015573  0.160979  \n",
+            "TERMREASON -0.318500 -0.015744 -0.340366  \n",
+            "HIGHPOINT   0.365363  0.028358  0.805902  \n",
+            "CAMPS       0.340396  0.074534  0.441351  \n",
+            "ROPE       -0.045923 -0.009627  0.029557  \n",
+            "TOTMEMBERS  0.656119  0.099564  0.121663  \n",
+            "SMTMEMBERS  0.841036  0.082438  0.281346  \n",
+            "MDEATHS     0.144613  0.110898  0.048889  \n",
+            "TOTHIRED    0.841969  0.170938  0.146368  \n",
+            "SMTHIRED    1.000000  0.114055  0.235689  \n",
+            "HDEATHS     0.114055  1.000000 -0.002609  \n",
+            "CHKSUM      0.235689 -0.002609  1.000000  \n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -2842,7 +2907,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 30
         },
         {
           "output_type": "display_data",
